# Lensy

./: .gitignore  com.github.amikha1lov.Lensy.json  com.github.amikha1lov.Lensy.yml  meson.build  pypi-dependencies.json  requirements.txt
.github/workflows/: python-app.yml
data/: com.github.amikha1lov.Lensy.appdata.xml.in  com.github.amikha1lov.Lensy.desktop.in  com.github.amikha1lov.Lensy.gschema.xml  meson.build
po/: POTFILES  meson.build
rpm/: lensy.spec
src/: lensy.gresource.xml  lensy.in  main.py  meson.build  screenshot.py  window.py  window.ui  window.ui~
